# Projet_Annuel_XLIM04

./: .gitignore  README.md  SPECIFICATION_FONCTIONNELLE.md  bootstrap_vcpkg.ps1  build_and_run.bat  lance.bat  start.bat  stop.bat  temp_build.bat
.github/: copilot-instructions.md
backend/: CMakeLists.txt  CMakePresets.json  CMakeSettings.json  Renderer.cpp  Renderer.hpp  main.cpp  vcpkg.json
build_vs/: ALL_BUILD.vcxproj  ALL_BUILD.vcxproj.filters  CMakeCache.txt  MonServeur.vcxproj  MonServeur.vcxproj.filters  Rendu3D_Server.sln  ZERO_CHECK.vcxproj  ZERO_CHECK.vcxproj.filters  cmake_install.cmake
build_vs/MonServeur.dir/Debug/: MonServeur.exe.recipe
build_vs/MonServeur.dir/Debug/MonServeur.tlog/: CL.command.1.tlog  CL.read.1.tlog  CL.write.1.tlog  Cl.items.tlog  CustomBuild.write.1.tlog  link.command.1.tlog  link.read.1.tlog  link.secondary.1.tlog  link.write.1.tlog
build_vs/x64/Debug/ALL_BUILD/: ALL_BUILD.recipe
build_vs/x64/Debug/ALL_BUILD/ALL_BUILD.tlog/: ALL_BUILD.lastbuildstate  CustomBuild.command.1.tlog  CustomBuild.read.1.tlog
build_vs/x64/Debug/ZERO_CHECK/: ZERO_CHECK.recipe
build_vs/x64/Debug/ZERO_CHECK/ZERO_CHECK.tlog/: CustomBuild.command.1.tlog  CustomBuild.read.1.tlog  CustomBuild.write.1.tlog
frontend/: index.html  script.js
